testsuite/tests/ghc-regress/annotations/should_fail/Annfail06_Help.hs
module Annfail06_Help where

data InstancesInWrongModule = InstancesInWrongModule